--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "tests": "mocha tests/*.js --exit",
-    "setup": "cat setup.sql | sqlite3 database.db"
+    "setup": "cat setup.sql | sqlite3 database.db && cat setup.sql | sqlite3 testdatabase.db"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +14,8 @@
     "botkit": "^4.5.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "sqlite3": "^4.1.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
