[PBI-6736] Implemented methods to create a new order and add users to the order

--- a/.env_example
+++ b/.env_example
@@ -8,3 +8,5 @@ SLACK_VERIFICATION_TOKEN=<verification-token>
 // Token!! Make sure to enable bot as BOT USER to access this cred. Allows bot
 // to post 
 SLACK_AUTH_TOKEN=xoxp-<auth-token>
+// This is the OAuth Access Token (above the Bot User OAuth Access Token in OAuth & Permissions)
+SLACK_OAUTH_ACCESS_TOKEN=xoxp-<oauth-access-token>
