--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "tests": "mocha tests/*.js --exit",
     "setup": "cat setup.sql | sqlite3 database.db && cat setup.sql | sqlite3 testdatabase.db"
   },
@@ -14,6 +15,8 @@
     "botkit": "^4.5.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "nodemon": "^1.19.4",
     "request": "^2.88.0",
     "sqlite3": "^4.1.0"
   },
