--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "tests": "mocha tests/*.js --exit",
+    "coverage": "nyc npm run tests",
     "setup": "cat setup.sql | sqlite3 database.db && cat setup.sql | sqlite3 testdatabase.db"
   },
   "author": "",
@@ -24,6 +25,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "mocha": "^6.2.1",
+    "nyc": "^14.1.1",
     "sinon": "^7.5.0"
   }
 }
