--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chai-http": "^4.3.0",
     "mocha": "^6.2.1",
     "nyc": "^14.1.1",
-    "sinon": "^7.5.0"
+    "sinon": "^7.5.0",
+    "chai-as-promised": "^7.1.1"
   }
 }
