--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon index.js",
     "tests": "mocha tests/*.js --exit",
     "coverage": "nyc npm run tests",
+    "reset": "rm database.db testdatabase.db && npm run setup",
     "setup": "cat setup.sql | sqlite3 database.db && cat setup.sql | sqlite3 testdatabase.db"
   },
   "author": "",
