--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "tests": "mocha tests/*.js --exit",
     "coverage": "nyc npm run tests",
     "reset": "rm database.db testdatabase.db && npm run setup",
-    "setup": "cat setup.sql | sqlite3 database.db && cat setup.sql | sqlite3 testdatabase.db"
+    "setup": "cat setup.sql | sqlite3 database.db && cat setup.sql | sqlite3 testdatabase.db",
+    "lint": "node_modules/eslint/bin/eslint.js ."
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +27,12 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
     "sinon": "^7.5.0"
